--- a/css/style.css
+++ b/css/style.css
@@ -1025,9 +1025,15 @@ form input[type=checkbox]:checked + label span:before {
   overflow: hidden;
 }
 .main--thanks {
-  background-size: cover;
-  padding-bottom: 200px;
-  height: 70vh;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background-image: url(../img/bg1.jpg);
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
 }
 .main__img {
   margin-top: auto;
@@ -1037,7 +1043,7 @@ form input[type=checkbox]:checked + label span:before {
   max-width: 60%;
 }
 .main__img--thanks {
-  max-width: 45%;
+  /*max-width: 45%;*/
 }
 .main img {
   display: block;
@@ -1235,6 +1241,31 @@ form input[type=checkbox]:checked + label span:before {
 .main__img--mob {
   display: none;
 }
+/*
+@media screen and (min-width: 961px) {
+	.main--thanks {
+		background-image: url(../img/bg1.jpg);
+	    background-size: cover;
+	    padding-bottom: 650px;
+	    background-color: #aee1fb;
+	    background-position: center -150px;
+	}
+	.main__img--thanks {
+		margin-top: auto;
+	    position: absolute;
+	    top: 25%;
+	    right: 0;
+	    max-width: 60%;
+	}
+
+	.main__img--thanks img {
+		display: block;
+		width: 100%;
+		height: auto;
+	    
+	}
+}
+*/
 .social {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1249,7 +1280,7 @@ form input[type=checkbox]:checked + label span:before {
   position: relative;
 }
 .social__link:not(:last-child) {
-  margin-right: 10px;
+  margin-right: 12px;
 }
 .social__link img {
   display: block;
@@ -1430,13 +1461,31 @@ form input[type=checkbox]:checked + label span:before {
   padding-left: 30px;
 }
 .description__item--big {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 10px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 10px 30px 0px #cfcdcd;
+          box-shadow: 0px 10px 30px 0px #cfcdcd;
   max-width: calc(100% - 30px);
   width: 100%;
+  height: auto;
 }
-.description__item img {
+.description__item img,
+.description__item--big img {
   display: block;
   width: 100%;
+  height: auto;
   margin: 0;
+}
+.description__item--mob {
+  display: none;
+}
+.description__item--big {
+  display: block;
 }
 .description__title {
   -webkit-box-sizing: border-box;
@@ -1660,6 +1709,7 @@ form input[type=checkbox]:checked + label span:before {
   padding-right: 15px;
 }
 .why__main-title {
+  white-space: nowrap;
   margin: 0;
   margin-bottom: 80px;
   text-align: right;
@@ -2051,7 +2101,9 @@ form input[type=checkbox]:checked + label span:before {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  /*justify-content: space-between;*/
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .footer__privacy {
   text-align: right;
@@ -2536,6 +2588,18 @@ img.mfp-img {
     background-position: center 350px;
   }
 }
+@media screen and (min-width: 531px) {
+  .main--thanks {
+    background-image: url(../img/bg1.jpg);
+    background-size: cover;
+    padding-bottom: 200px;
+    background-color: #aee1fb;
+    background-position: center 0;
+  }
+  .main__img--thanks {
+    display: none;
+  }
+}
 @media screen and (min-width: 729px) {
   .main__tel img {
     display: block;
@@ -2607,30 +2671,57 @@ img.mfp-img {
     width: 33%;
   }
 }
+@media screen and (min-width: 960px) {
+  .main--thanks {
+    position: relative;
+    background-image: url(../img/bg1.jpg);
+    background-size: 100%;
+    padding-bottom: 300px;
+    background-position: center 0;
+  }
+  .main__img--thanks {
+    display: block;
+    position: absolute;
+    top: 45%;
+    right: 0;
+    max-width: 50%;
+  }
+  .main__img--thanks img {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
 @media screen and (min-width: 961px) {
   .main__tel img {
     display: none;
   }
 }
-@media screen and (min-width: 1080px) {
+@media screen and (min-width: 1090px) {
   .main--thanks {
-    background-size: cover;
-    padding-bottom: 350px;
-    height: auto;
+    background-image: url(../img/bg1.jpg);
+    background-size: 100%;
+    padding-bottom: 500px;
+    background-position: center 150px;
+  }
+  .main__img--thanks {
+    position: absolute;
+    top: 40%;
+    right: 0;
+    max-width: 60%;
   }
 }
-@media screen and (min-width: 1160px) {
+@media screen and (min-width: 1336px) {
   .main--thanks {
     background-size: cover;
-    padding-bottom: 350px;
-    /*height: 90vh;*/
+    padding-bottom: 700px;
+    background-position: center 0px;
   }
-}
-@media screen and (min-width: 1528px) {
-  .main--thanks {
-    background-size: cover;
-    padding-bottom: 200px;
-    height: 90vh;
+  .main__img--thanks {
+    position: absolute;
+    top: 30%;
+    right: 0;
+    max-width: 60%;
   }
 }
 @media screen and (max-width: 728px) {
@@ -2686,10 +2777,17 @@ img.mfp-img {
   .main__subtitle {
     font-size: 14px;
   }
-  .main__title--decor1::before,
-  .main__title--decor2::before {
+  .main__title--decor1::before {
+    width: 90%;
     height: 10px;
-    bottom: 5px;
+    right: 5px;
+    bottom: 8px;
+  }
+  .main__title--decor2::before {
+    width: 91%;
+    height: 17px;
+    bottom: 8px;
+    right: 3px;
   }
   .main__descr {
     font-size: 16px;
@@ -2746,6 +2844,20 @@ img.mfp-img {
     padding-top: 00px;
     max-width: 300px;
     width: 100%;
+  }
+  .advantage__text2--decor {
+    z-index: 1;
+    position: relative;
+  }
+  .advantage__text2--decor::before {
+    position: absolute;
+    content: "";
+    width: 90%;
+    height: 9px;
+    background-color: #fbd741;
+    right: 3px;
+    bottom: 4px;
+    z-index: -1;
   }
   .calculator__title {
     font-size: 14px;
@@ -3035,7 +3147,7 @@ img.mfp-img {
     padding-top: 5px;
   }
   .main__social {
-    margin-right: 15px;
+    margin-right: 12px;
   }
   .advantage__items--wrap {
     -webkit-box-orient: vertical;
@@ -3064,6 +3176,18 @@ img.mfp-img {
   .main__wrapper {
     padding-left: 10px;
     padding-right: 10px;
+  }
+}
+@media screen and (max-width: 530px) {
+  .main--thanks {
+    background-image: url(../img/bg-mob.jpg);
+    background-size: contain;
+    padding-bottom: 180px;
+    background-color: #aee1fb;
+    background-position: center 100%;
+  }
+  .main__img--thanks {
+    display: none;
   }
 }
 @media screen and (max-width: 468px) {
@@ -3207,7 +3331,8 @@ img.mfp-img {
   }
 }
 @media screen and (max-width: 768px) {
-  .description__item {
+  .description__item,
+  .description__item--big {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     max-width: calc(100% - 10px);
@@ -3217,8 +3342,20 @@ img.mfp-img {
     padding: 10px;
     background-color: #ffffff;
     border-radius: 10px;
+    height: 100%;
     -webkit-box-shadow: 0px 10px 30px 0px #cfcdcd;
             box-shadow: 0px 10px 30px 0px #cfcdcd;
+  }
+  .description__item--big-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .description__item--mob {
+    display: block;
+  }
+  .description__item--big {
+    display: none;
   }
   .why__item {
     width: 80%;
